tests/binding/fail/unbound_var.crs
fn main() {
    if b {
        c();
    } else {
        return 2 + d;
    }
    var b : i32 = true;
}